Fix issues on mobile and cclw theme

--- a/themes/cclw/styles/styles.scss
+++ b/themes/cclw/styles/styles.scss
@@ -69,14 +69,13 @@
   }
 
   .search-dropdown {
-    top: 20px;
-    padding-top: 20px;
     margin-left: 24px;
     width: calc(100% - 48px);
     border-top: none;
 
+    @apply hidden sm:block;
+
     &.search-dropdown_large {
-      padding-top: 0;
       top: 48px;
     }
   }
